2005-07-01  Not Zed  <NotZed@Ximian.com>

	* import.glade: moved from importer/ to here.

	* importer/*: Killed all of this off.

	* Makefile.am: remove importer/ and related stuff.

+2005-06-24  Harish Krishnaswamy <kharish@novell.com> 

	(patch submitted by Andre Klapper <a9016009@gmx.de>)
	* e-shell-window-commands.c: changed copyright year from 2004 to 2005

+2005-06-23  Not Zed  <NotZed@Ximian.com>

	* e-shell-window-commands.c: added jonathan dieter.  Fixed up the
	busted utf8 and duplicates.

2005-06-21  Not Zed  <NotZed@Ximian.com>

	* e-shell-window-commands.c: add brian mury to contributors.

2005-06-18  Tor Lillqvist  <tml@novell.com>

	* GNOME_Evolution_Shell.server.in.in: Use EXEEXT.

	* GNOME_Evolution_Test.server.in.in: Use SOEXT.

2005-06-02  Not Zed  <NotZed@Ximian.com>

	* Evolution.*.idl: Fix so these are only ever included once.

	* evolution-component.c: BonoboObject wrapper for
	Evolution::Component interface.  Abstract, doesn't implement
	methods.

	* Evolution-Shell.idl: add a method to find a component by
	component alias.

	* e-shell.c (impl_Shell_findComponent): & implement it

2005-06-01  Not Zed  <NotZed@Ximian.com>

	* e-shell-window-commands.c: fixed the utf8 in the last patch.

2005-06-01 S.Çaglar Onur <caglar@uludag.org.tr>

	* e-shell-window-commands.c (authors[]): Fixed my name.

2005-05-31  Rodrigo Moya <rodrigo@novell.com>

	* GNOME_Evolution_Shell.server.in.in: added missing name to
	Shell_Config_Factory object description.

2005-05-25  Not Zed  <NotZed@Ximian.com>

	* main.c (main): remove mono registrtion, this is implemented
	using a plugin now.  register the plugin type loader hook.

2005-05-16  Not Zed  <NotZed@Ximian.com>

	* Makefile.am: fix error file build/path changes

2005-05-16  Srinivasa Ragavan <sragavan@novell.com>
	* e-component-registry.c(component_info_new) (component_info_free)(query_components):
	  e-component-registry.h:
	  e-shell-window.c (setup_widgets):