@@ -1,3 +1,9 @@
+2005-07-06  Not Zed  <NotZed@Ximian.com>
+
+	* e-shell-importer.c (import_druid_finish): now setup a window to
+	display importer progress, so it doesn't have to be copied for all
+	importers & they can all share it.
+
 2005-07-01  Not Zed  <NotZed@Ximian.com>
 
 	* import.glade: moved from importer/ to here.
